[package]
name = "petra-ca-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Certificate handling
rcgen = { version = "0.13", features = ["x509-parser"] }
x509-parser = "0.16"
pem = "3.0"
ring = "0.17"
rustls = "0.23"
rustls-pemfile = "2.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Stripe
stripe-rust = { version = "0.31", features = ["runtime-tokio-hyper"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
handlebars = "5.0"

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
base64 = "0.22"
