[package]
name = "petra-ca-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework - minimal features
axum = { version = "0.7", features = ["macros"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["cors"], default-features = false }

# Certificate handling - core only
rcgen = { version = "0.13", default-features = false }
rustls = { version = "0.23", default-features = false }

# Database - minimal
sqlx = { 
    version = "0.7", 
    features = ["runtime-tokio-rustls", "postgres", "uuid"],
    default-features = false 
}

# Payments - minimal Stripe features
async-stripe = { 
    version = "0.41", 
    features = ["runtime-tokio-hyper", "billing", "checkout"],
    default-features = false 
}

# Email - lightweight alternative
lettre = { 
    version = "0.11", 
    features = ["tokio1-rustls", "builder"],
    default-features = false 
}

# Essential only
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"

[profile.release]
# Faster compilation, smaller binary
lto = "thin"           # Instead of "fat"
codegen-units = 16     # Instead of 1
panic = "abort"
strip = true           # Remove debug symbols
