[package]
name = "petra-ca-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Certificate handling
rcgen = { version = "0.13", features = ["pem"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
x509-parser = "0.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"],default-features = false }

# Payments
async-stripe = {  version = "0.41",  features = ["runtime-tokio-hyper", "billing", "checkout", "webhook-events", "connect"], default-features = false }

# Email - Fixed with proper TLS features
lettre = { version = "0.11",  features = [ "tokio1-rustls" , "builder", "smtp-transport", "ring", "rustls-native-certs" ], default-features = false }
handlebars = "6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
ring = "0.17"  # Add ring explicitly since multiple deps need it

# HTTP
hyper = { version = "1", features = ["server", "http1", "http2"] }
tower = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
